// 这个就是protobuf的中间文件
// 指定的当前proto语法的版本，有2和3
syntax = "proto3";

// 指定等会文件生成出来的package
package service;

option go_package = "./proto";

// 定义request model
message ProductRequest{
  int32 prod_id = 1; // 1代表顺序
}

// 定义response model
message ProductResponse{
  int32 prod_stock = 1; // 1代表顺序
}

// 定义服务主体
service ProdService{
  // 定义方法
  rpc GetProductStock(ProductRequest) returns(ProductResponse);
}
